--- a/notebooks/internal/store_querying.ipynb
+++ b/notebooks/internal/store_querying.ipynb
@@ -32,7 +32,7 @@
     "        user_code_id=uuid4(),\n",
     "        dataset_name=\"test\",\n",
     "    )\n",
-    "    job = do_client.rpc.jobs.create(job_create)"
+    "    job = do_client.rpc.job.create(job_create)"
    ]
   },
   {
@@ -45,7 +45,7 @@
     "%%timeit\n",
     "\n",
     "# Lookup by UID is fast\n",
-    "do_client.jobs.get(uid=str(job.uid))"
+    "do_client.job.get(uid=str(job.uid))"
    ]
   },
   {
@@ -59,7 +59,7 @@
     "\n",
     "# Any other query is a get_all internally\n",
     "# O(n)\n",
-    "do_client.jobs.get(name=job.name)"
+    "do_client.job.get(name=job.name)"
    ]
   },
   {
@@ -72,7 +72,7 @@
     "%%timeit\n",
     "\n",
     "# First 5 jobs, default sort order is created_at, desc\n",
-    "jobs = do_client.jobs.get_all(\n",
+    "jobs = do_client.job.get_all(\n",
     "    status=\"pending_code_review\",\n",
     "    limit=5,\n",
     "    order_by=\"name\",\n",
