--- a/notebooks/quickstart/do_flow.ipynb
+++ b/notebooks/quickstart/do_flow.ipynb
@@ -214,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobs = do_client.jobs.get_all(status=\"pending_code_review\")\n",
+    "jobs = do_client.job.get_all(status=\"pending_code_review\")\n",
     "jobs"
    ]
   },
@@ -256,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, job = do_client.jobs.share_results(job)"
+    "_, job = do_client.job.share_results(job)"
    ]
   },
   {
