--- a/notebooks/quickstart/ds_flow.ipynb
+++ b/notebooks/quickstart/ds_flow.ipynb
@@ -89,7 +89,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_client.datasets"
+    "datasets = ds_client.dataset.get_all()\n",
+    "datasets"
    ]
   },
   {
@@ -99,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = ds_client.datasets[0]"
+    "dataset = datasets[0]"
    ]
   },
   {
@@ -188,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "job = ds_client.jobs.submit(user_code_path=my_file, dataset_name=dataset.name)\n",
+    "job = ds_client.job.submit(user_code_path=my_file, dataset_name=dataset.name)\n",
     "job.describe()"
    ]
   },
