add JobResult and related functions

--- a/notebooks/quickstart/full_flow.ipynb
+++ b/notebooks/quickstart/full_flow.ipynb
@@ -163,7 +163,7 @@
    },
    "outputs": [],
    "source": [
-    "ds_client.dataset.get(name=\"dataset-1\").get_mock_path()"
+    "ds_client.dataset.get(name=\"dataset-1\").mock_path"
    ]
   },
   {
@@ -173,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_client.dataset.get(name=\"dataset-1\").get_private_path()"
+    "ds_client.dataset.get(name=\"dataset-1\").private_path"
    ]
   },
   {
@@ -286,8 +286,7 @@
    "source": [
     "job = jobs[-1]\n",
     "\n",
-    "# same as job.code.describe()\n",
-    "job.show_user_code()"
+    "job.user_code.describe()"
    ]
   },
   {
@@ -297,6 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Run\n",
     "res_job = do_client.run_private(job)"
    ]
   },
@@ -307,12 +307,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do_client.job.share_results(res_job);"
+    "# Review\n",
+    "# NOTE review_results is only available for the data owner, and will look at the Job outputs that are not yet shared to SyftBox\n",
+    "results_to_review = do_client.job.review_results(job)\n",
+    "\n",
+    "results_to_review.describe()\n",
+    "\n",
+    "print(\"Loading all output files for job {job.id}...\")\n",
+    "for output_name, output in results_to_review.outputs.items():\n",
+    "    print(f\"{output_name}: {output}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Share\n",
+    "do_client.job.share_results(res_job)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "source": [
     "# DS views the results"
@@ -321,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,17 +361,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_files = [f for f in job.output_path.glob(\"**/*\") if f.is_file()]\n",
-    "assert len(output_files)"
+    "job_results = ds_client.job.get_results(job)\n",
+    "\n",
+    "job_results.describe()\n",
+    "for output_name, output in job_results.outputs.items():\n",
+    "    print(f\"{output_name}: {output}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "28",
+   "id": "29",
    "metadata": {},
    "source": [
     "## Clean up"
@@ -361,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,14 +391,6 @@
     "\n",
     "remove_rds_stack_dir(key=key)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -395,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
