--- a/notebooks/quickstart/full_flow-custom_functions.ipynb
+++ b/notebooks/quickstart/full_flow-custom_functions.ipynb
@@ -57,9 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CWD = RDS_NOTEBOOKS_PATH / \"quickstart\"\n",
-    "\n",
-    "CWD"
+    "CWD = RDS_NOTEBOOKS_PATH / \"quickstart\""
    ]
   },
   {
@@ -69,9 +67,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "private_dir = CWD / \"data\" / \"sqlite-1\" / \"private\"\n",
-    "mock_dir = CWD / \"data\" / \"sqlite-1\" / \"mock\"\n",
-    "markdown_path = CWD / \"data\" / \"sqlite-1\" / \"description.md\"\n",
+    "dataset_name = \"sqlite-chat-logs\"\n",
+    "private_dir = CWD / \"data\" / dataset_name / \"private\"\n",
+    "mock_dir = CWD / \"data\" / dataset_name / \"mock\"\n",
+    "markdown_path = CWD / \"data\" / dataset_name / \"description.md\"\n",
     "\n",
     "private_dir.mkdir(parents=True, exist_ok=True)\n",
     "mock_dir.mkdir(parents=True, exist_ok=True)\n",
@@ -169,7 +168,7 @@
    "source": [
     "try:\n",
     "    data = do_client.dataset.create(\n",
-    "        name=\"sqlite-1\",\n",
+    "        name=dataset_name,\n",
     "        path=private_dir,\n",
     "        mock_path=mock_dir,\n",
     "        summary=\"sqlite dataset\",\n",
@@ -191,7 +190,7 @@
    },
    "outputs": [],
    "source": [
-    "do_client.dataset.get(name=\"sqlite-1\").describe()"
+    "do_client.dataset.get(name=dataset_name).describe()"
    ]
   },
   {
@@ -209,7 +208,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "custom_function_path = CWD / \"data\" / \"sqlite_custom_function.py\""
+    "custom_function_dir = CWD / \"data\" / \"custom_function\"\n",
+    "custom_function_dir.mkdir(parents=True, exist_ok=True)\n",
+    "custom_function_path = custom_function_dir / \"sqlite_custom_function.py\"\n",
+    "custom_function_readme_path = custom_function_dir / \"README.md\"\n",
+    "\n",
+    "# Note: %%writefile is a magic command to write the content of the cell to a file.\n",
+    "\n",
+    "# In the following cell, we create a custom function that loads a query from a file,\n",
+    "# executes it against a SQLite database and writes the result to a file.\n",
+    "# The %%writefile command then writes the cell to custom_function_path."
    ]
   },
   {
@@ -263,15 +271,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a README\n",
+    "\n",
+    "readme = \"\"\"\n",
+    "# SQLite Custom Function\n",
+    "This function executes a user-defined query on an SQLite database.\n",
+    "\n",
+    "## Usage\n",
+    "Create a `user_params.json`, and submit this as a Job with this custom function.\n",
+    "User params should include a `db_query` with the SQL query you want to execute:\n",
+    "```json\n",
+    "{\n",
+    "    \"db_query\": \"SELECT * FROM chat_log\"\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "Alternatively, you can submit a Job directly to this function:\n",
+    "```\n",
+    "dataset = client.dataset.get(name=\"sqlite-chat-logs\")\n",
+    "custom_function = client.custom_function.get(name=\"execute_user_query\")\n",
+    "job = custom_function.submit_job(dataset_name=dataset.name, db_query=\"SELECT * FROM chat_log\")\n",
+    "```\n",
+    "\n",
+    "This will create `user_params.json` automatically and submit the job for you.\n",
+    "\"\"\"\n",
+    "\n",
+    "custom_function_readme_path.write_text(readme.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "do_client.custom_function.submit(\n",
     "    name=\"execute_user_query\",\n",
     "    code_path=custom_function_path,\n",
+    "    readme_path=custom_function_readme_path,\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "16",
    "metadata": {
     "metadata": {}
    },
@@ -282,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {
     "metadata": {}
    },
@@ -294,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {
     "metadata": {}
    },
@@ -309,29 +353,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_query = \"SELECT * FROM chat_log WHERE username = 'alice'\"\n",
-    "\n",
-    "user_params = {\"db_query\": my_query}\n",
-    "\n",
-    "user_params_dir = CWD / \"data\" / \"custom_function_submission\"\n",
-    "user_params_dir.mkdir(parents=True, exist_ok=True)\n",
-    "with open(user_params_dir / \"user_params.json\", \"w\") as f:\n",
-    "    json.dump(user_params, f, indent=2)\n",
-    "\n",
-    "do_client.job.submit(\n",
-    "    user_code_path=user_params_dir / \"user_params.json\",\n",
-    "    custom_function=custom_func,\n",
-    "    dataset_name=\"sqlite-1\",\n",
+    "job = custom_func.submit_job(\n",
+    "    dataset_name=dataset_name,\n",
+    "    db_query=\"SELECT * FROM chat_log WHERE username = 'alice'\",\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "source": [
     "# DO reviews"
@@ -340,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "source": [
     "# DS views the results"
@@ -420,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30",
+   "id": "31",
    "metadata": {},
    "source": [
     "## Clean up"
@@ -463,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -484,7 +518,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
