move custom code submission to client

--- a/notebooks/quickstart/full_flow-custom_functions.ipynb
+++ b/notebooks/quickstart/full_flow-custom_functions.ipynb
@@ -357,10 +357,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "job = custom_func.submit_job(\n",
+    "job = ds_client.job.submit_with_params(\n",
     "    dataset_name=dataset_name,\n",
+    "    custom_function=custom_func,\n",
     "    db_query=\"SELECT * FROM chat_log WHERE username = 'alice'\",\n",
-    ")"
+    ")\n",
+    "\n",
+    "# Alternatively, this is equivalent to the above:\n",
+    "# job = custom_func.submit_job(\n",
+    "#     dataset_name=dataset_name,\n",
+    "#     db_query=\"SELECT * FROM chat_log WHERE username = 'alice'\",\n",
+    "# )"
    ]
   },
   {
@@ -518,7 +525,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
