fixing hardcoded paths in `syft_rds.__init__.py`

--- a/notebooks/internal/full_flow_folder.ipynb
+++ b/notebooks/internal/full_flow_folder.ipynb
@@ -10,7 +10,7 @@
    "outputs": [],
    "source": [
     "from syft_rds.orchestra import setup_rds_stack\n",
-    "from syft_rds import RDS_NOTEBOOKS_PATH"
+    "from syft_rds import SYFT_DATASCIENCE_NOTEBOOKS_PATH"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CWD = RDS_NOTEBOOKS_PATH / \"quickstart\""
+    "CWD = SYFT_DATASCIENCE_NOTEBOOKS_PATH / \"quickstart\""
    ]
   },
   {
@@ -379,6 +379,14 @@
     "output_files = [f for f in job.output_path.glob(\"**/*\") if f.is_file()]\n",
     "assert len(output_files)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -397,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
