--- a/notebooks/quickstart/do_flow.ipynb
+++ b/notebooks/quickstart/do_flow.ipynb
@@ -33,7 +33,7 @@
     "DATA_OWNER = \"data_owner@openmined.org\"\n",
     "DATA_SCIENTIST = \"data_scientist@openmined.org\"\n",
     "\n",
-    "CLIENTS_PATH = sy.RDS_REPO_PATH / \"syft-rds\" / \".clients\"\n",
+    "CLIENTS_PATH = sy.SYFT_DATASCIENCE_REPO_PATH / \"syft-rds\" / \".clients\"\n",
     "syftbox_config_path = CLIENTS_PATH / DATA_OWNER / \"config.json\"\n",
     "\n",
     "assert syftbox_config_path.exists()\n",
