--- a/notebooks/quickstart/ds_flow.ipynb
+++ b/notebooks/quickstart/ds_flow.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "DATA_OWNER = \"data_owner@openmined.org\"\n",
     "DATA_SCIENTIST = \"data_scientist@openmined.org\"\n",
-    "CLIENTS_PATH = sy.RDS_REPO_PATH / \"syft-rds\" / \".clients\"\n",
+    "CLIENTS_PATH = sy.SYFT_DATASCIENCE_REPO_PATH / \"syft-rds\" / \".clients\"\n",
     "syftbox_config_path = CLIENTS_PATH / DATA_SCIENTIST / \"config.json\"\n",
     "\n",
     "assert syftbox_config_path.exists()\n",
