--- a/notebooks/quickstart/full_flow-custom_functions.ipynb
+++ b/notebooks/quickstart/full_flow-custom_functions.ipynb
@@ -10,7 +10,7 @@
    "outputs": [],
    "source": [
     "from syft_rds.orchestra import setup_rds_stack\n",
-    "from syft_rds import RDS_NOTEBOOKS_PATH\n",
+    "from syft_rds import SYFT_DATASCIENCE_NOTEBOOKS_PATH\n",
     "from pathlib import Path"
    ]
   },
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CWD = RDS_NOTEBOOKS_PATH / \"quickstart\""
+    "CWD = SYFT_DATASCIENCE_NOTEBOOKS_PATH / \"quickstart\""
    ]
   },
   {
