--- a/notebooks/quickstart/full_flow_functions.ipynb
+++ b/notebooks/quickstart/full_flow_functions.ipynb
@@ -10,7 +10,7 @@
    "outputs": [],
    "source": [
     "from syft_rds.orchestra import setup_rds_stack\n",
-    "from syft_rds import RDS_NOTEBOOKS_PATH\n",
+    "from syft_rds import SYFT_DATASCIENCE_NOTEBOOKS_PATH\n",
     "from syft_rds.syft_runtime.main import CodeRuntime"
    ]
   },
@@ -58,7 +58,7 @@
    },
    "outputs": [],
    "source": [
-    "CWD = RDS_NOTEBOOKS_PATH / \"quickstart\""
+    "CWD = SYFT_DATASCIENCE_NOTEBOOKS_PATH / \"quickstart\""
    ]
   },
   {
