--- a/notebooks/quickstart/full_flow.ipynb
+++ b/notebooks/quickstart/full_flow.ipynb
@@ -96,10 +96,10 @@
     "try:\n",
     "    data = do_client.dataset.create(\n",
     "        name=\"dataset-1\",  # MUST BE UNIQUE. Throw Exception if already exist.\n",
-    "        path=private_dir,  # MUST EXIST\n",
+    "        private_path=private_dir,  # MUST EXIST\n",
     "        mock_path=mock_dir,\n",
     "        summary=\"dummy data\",\n",
-    "        description_path=markdown_path,\n",
+    "        readme_path=markdown_path,\n",
     "    )\n",
     "except Exception as e:\n",
     "    if \"already exists\" in str(e):\n",
@@ -151,23 +151,13 @@
    },
    "outputs": [],
    "source": [
-    "ds_client.dataset.get(name=\"dataset-1\").mock_path"
+    "ds_client.dataset.get(name=\"dataset-1\").mock_dir"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "11",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds_client.dataset.get(name=\"dataset-1\").private_path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12",
    "metadata": {
     "metadata": {}
    },
@@ -180,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "13",
    "metadata": {
     "metadata": {}
    },
@@ -211,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "14",
    "metadata": {},
    "source": [
     "# Submit a job to create UserCode and a Job"
@@ -220,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "15",
    "metadata": {
     "metadata": {}
    },
@@ -233,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "17",
    "metadata": {},
    "source": [
     "# DO reviews"
@@ -257,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24",
+   "id": "23",
    "metadata": {},
    "source": [
     "# DS views the results"
@@ -328,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28",
+   "id": "27",
    "metadata": {},
    "source": [
     "## Clean up"
@@ -371,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": []
