--- a/packages/syft-datasets/notebooks/example_usage.ipynb
+++ b/packages/syft-datasets/notebooks/example_usage.ipynb
@@ -61,19 +61,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Optional, configure which SyftBox to use `syd.login(config_path=\"path/to/config.json\")`\n",
-    "syd.login()"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "4",
+   "id": "3",
    "metadata": {},
    "source": [
     "# Creating a dataset"
@@ -82,26 +71,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
     "    my_dataset = syd.create(\n",
-    "        name=\"my-dataset\",\n",
+    "        name=\"my-dataset-2\",\n",
     "        mock_path=data_dir / \"mock_data.csv\",\n",
     "        private_path=data_dir / \"private_data.csv\",\n",
     "        readme_path=readme_path,\n",
     "        summary=\"This is a mock dataset for demonstration purposes.\",\n",
     "        tags=[\"example\", \"testing\"],\n",
     "    )\n",
+    "    print(f\"Dataset created: {my_dataset.name}\")\n",
     "except FileExistsError:\n",
     "    pass"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "5",
    "metadata": {},
    "source": [
     "# Getting and searching datasets"
@@ -110,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "9",
    "metadata": {},
    "source": []
   }
