--- a/packages/syft-runtimes/src/syft_runtimes/notebooks/getting_started.ipynb
+++ b/packages/syft-runtimes/src/syft_runtimes/notebooks/getting_started.ipynb
@@ -12,7 +12,11 @@
     "    initialize_sync_config,\n",
     "    high_side_connect,\n",
     "    sync,\n",
-    ")"
+    "    prepare_dataset_for_low_side,\n",
+    "    prepare_datasets_from_high_side,\n",
+    ")\n",
+    "\n",
+    "from syft_runtimes.high_low.rsync import Side"
    ]
   },
   {
@@ -31,7 +35,8 @@
    "outputs": [],
    "source": [
     "# Low side settings\n",
-    "lowside_syftbox_dir = \"~/.syftbox/clients/alice@openmined.org\"\n",
+    "lowside_syftbox_dir = \"~/.syftbox/clients/alice@openmined.org/SyftBox\"\n",
+    "lowside_email = \"alice@openmined.org\"\n",
     "\n",
     "# ssh_config: dict = {\n",
     "#     \"low_ssh_host\": \"example.com\",\n",
@@ -52,7 +57,9 @@
    "outputs": [],
    "source": [
     "# High side settings\n",
-    "highside_email = \"data_owner@private.com\"\n",
+    "highside_email = (\n",
+    "    lowside_email  # Important: must match, or we have to change the dataset URLs\n",
+    ")\n",
     "highside_identifier = \"highside-1234\""
    ]
   },
@@ -99,12 +106,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO - ensure the sync folders exist on the lowside (over ssh?)\n",
+    "\n",
+    "\n",
+    "lowside_sync_folders = [\n",
+    "    sync_config.jobs_dir(Side.LOW),\n",
+    "    sync_config.outputs_dir(Side.LOW),\n",
+    "    sync_config.datasets_dir(Side.LOW),\n",
+    "]\n",
+    "\n",
+    "for folder in lowside_sync_folders:\n",
+    "    folder.mkdir(parents=True, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sync(syftbox_client=high_syftbox_client)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "source": [
     "# Create a high-side dataset"
@@ -113,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,14 +150,24 @@
     "\n",
     "# Set the high client as default syftbox client\n",
     "os.environ[CONFIG_PATH_ENV] = str(\n",
-    "    high_syftbox_client.workspace.data_dir / \"config.json\"\n",
+    "    high_syftbox_client.workspace.data_dir.parent / \"config.json\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ[CONFIG_PATH_ENV]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,16 +228,152 @@
     "    readme_path=readme_path,\n",
     "    summary=\"This is a mock dataset for demonstration purposes.\",\n",
     "    tags=[\"example\", \"testing\", \"highside\"],\n",
+    "    location=highside_identifier,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "15",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "highside_dataset.mock_dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Copy the mock part of the dataset to the sync folder\n",
+    "prepare_dataset_for_low_side(highside_dataset, syftbox_client=high_syftbox_client)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from syft_notebook_ui import show_dir\n",
+    "from syft_runtimes.high_low.rsync import Side, SyncDirection\n",
+    "\n",
+    "# Now we can see the dataset is in our sync folder\n",
+    "show_dir(sync_config.base_sync_dir(Side.HIGH))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now we can sync from high to low\n",
+    "\n",
+    "sync(syftbox_client=high_syftbox_client, direction=SyncDirection.LOCAL_TO_REMOTE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19",
+   "metadata": {},
+   "source": [
+    "# Switch to low-side"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from syft_core import Client as SyftBoxClient\n",
+    "\n",
+    "lowside_syftbox_client = SyftBoxClient.load(\n",
+    "    filepath=\"~/.syftbox/clients/alice@openmined.org/config.json\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# On the low side, we can now publish the synced dataset to our datasite\n",
+    "\n",
+    "prepare_datasets_from_high_side(\n",
+    "    high_side_name=highside_identifier,\n",
+    "    syftbox_client=lowside_syftbox_client,\n",
+    "    overwrite=True,  # Set to True to overwrite existing datasets on the low side\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can now see the dataset on the low side!\n",
+    "\n",
+    "from syft_datasets import SyftDatasetManager\n",
+    "\n",
+    "lowside_dataset_manager = SyftDatasetManager(syftbox_client=lowside_syftbox_client)\n",
+    "lowside_dataset_manager.get_all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = lowside_dataset_manager.get(name=\"highside_example_dataset\")\n",
+    "\n",
+    "dataset.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sanity check: the private data is not available on the low side\n",
+    "# TODO improve error reporting for this case\n",
+    "\n",
+    "dataset.private_dir"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25",
+   "metadata": {},
+   "source": [
+    "# NEXT STEPS:\n",
+    "\n",
+    "- Rewrite syft-runtimes to the folder-based job runner (see https://docs.google.com/document/d/1ORYC-Z55t07dcu45mn2AL1RiMGWOlCD2mYb8kKUk0SY/edit?tab=t.0)\n",
+    "\n",
+    "High side:\n",
+    "- Run job runner on high-side as daemon process, watching `private/job_runners/highside-1234/jobs` for new jobs\n",
+    "- Manually sync pending jobs and results (just in a notebook for now)\n",
+    "\n",
+    "Low side:\n",
+    "- Low side: submit job to the correct runner (according to the dataset location: `private/job_runners/<dataset_location>/jobs`)\n",
+    "- watch for results in the corresponding outputs dir\n"
+   ]
   }
  ],
  "metadata": {
