--- a/packages/syft-runtimes/src/syft_runtimes/notebooks/getting_started.ipynb
+++ b/packages/syft-runtimes/src/syft_runtimes/notebooks/getting_started.ipynb
@@ -35,9 +35,12 @@
    "outputs": [],
    "source": [
     "# Low side settings\n",
+    "\n",
+    "# NOTE: This needs to point to an existing syftbox directory. If it does not exist, create one first: https://www.syftbox.net/\n",
     "lowside_syftbox_dir = \"~/.syftbox/clients/alice@openmined.org/SyftBox\"\n",
     "lowside_email = \"alice@openmined.org\"\n",
     "\n",
+    "# Only required if you want to connect to the low side via SSH (for syncing from high to low)\n",
     "# ssh_config: dict = {\n",
     "#     \"low_ssh_host\": \"example.com\",\n",
     "#     \"low_ssh_user\": \"username\",\n",
