--- a/packages/syft-datasets/notebooks/example_usage.ipynb
+++ b/packages/syft-datasets/notebooks/example_usage.ipynb
@@ -105,7 +105,7 @@
    "outputs": [],
    "source": [
     "# Getting a dataset by name\n",
-    "my_dataset = syd.get(name=\"my-dataset\")\n",
+    "my_dataset = syd.get(name=\"my-dataset-2\")\n",
     "my_dataset.describe()"
    ]
   },
@@ -139,9 +139,31 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "syd.delete(name=\"my-dataset-2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "syd.get_all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -161,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
