initial notebooks for different runtimes

--- a/packages/syft-runtimes/notebooks/high-low/high_low.ipynb
+++ b/packages/syft-runtimes/notebooks/high-low/high_low.ipynb
@@ -24,7 +24,7 @@
    "id": "1",
    "metadata": {},
    "source": [
-    "# Initializing the high datasite"
+    "## Initializing the high datasite and connect to it"
    ]
   },
   {
@@ -110,8 +110,6 @@
    "outputs": [],
    "source": [
     "# TODO - ensure the sync folders exist on the lowside (over ssh?)\n",
-    "\n",
-    "\n",
     "lowside_sync_folders = [\n",
     "    sync_config.jobs_dir(Side.LOW),\n",
     "    sync_config.outputs_dir(Side.LOW),\n",
@@ -137,7 +135,7 @@
    "id": "9",
    "metadata": {},
    "source": [
-    "# Create a high-side dataset"
+    "## Create a high-side dataset"
    ]
   },
   {
@@ -287,7 +285,7 @@
    "id": "19",
    "metadata": {},
    "source": [
-    "# Switch to low-side"
+    "## Switch to low-side"
    ]
   },
   {
@@ -365,18 +363,28 @@
    "id": "25",
    "metadata": {},
    "source": [
-    "# NEXT STEPS:\n",
-    "\n",
-    "- Rewrite syft-runtimes to the folder-based job runner (see https://docs.google.com/document/d/1ORYC-Z55t07dcu45mn2AL1RiMGWOlCD2mYb8kKUk0SY/edit?tab=t.0)\n",
-    "\n",
-    "High side:\n",
-    "- Run job runner on high-side as daemon process, watching `private/job_runners/highside-1234/jobs` for new jobs\n",
-    "- Manually sync pending jobs and results (just in a notebook for now)\n",
-    "\n",
-    "Low side:\n",
-    "- Low side: submit job to the correct runner (according to the dataset location: `private/job_runners/<dataset_location>/jobs`)\n",
-    "- watch for results in the corresponding outputs dir\n"
+    "## High side Job Runner\n",
+    "- Run job runner on high-side as daemon process, watching the folder `private/job_runners/highside-1234/jobs` for new jobs\n",
+    "- Manually sync pending jobs and results (just in a notebook for now)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26",
+   "metadata": {},
+   "source": [
+    "## Low side submits jobs to the correct runner on the high side. Check for results in the outputs folder\n",
+    "- Low side: submit job to the correct runner (according to the dataset location: `private/job_runners/<dataset_location>/jobs`)\n",
+    "- watch for results in the corresponding outputs dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
