--- a/packages/syft-runtimes/notebooks/high-low/high_low_local_stack.ipynb
+++ b/packages/syft-runtimes/notebooks/high-low/high_low_local_stack.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import syft_runtimes.high_low as syhl\n",
     "from syft_runtimes.high_low.rsync import RsyncConfig\n",
-    "from syft_core import Client"
+    "from syft_rds.orchestra import setup_rds_server, remove_rds_stack_dir"
    ]
   },
   {
@@ -19,9 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lowside_client = Client.load()\n",
-    "lowside_email = lowside_client.email\n",
-    "lowside_email"
+    "remove_rds_stack_dir(key=\"low_datasites\", root_dir=\"./\")"
    ]
   },
   {
@@ -31,15 +29,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "highside_identifier = \"highside-1234\""
+    "DO = \"do1@openmined.org\"\n",
+    "do_stack_1 = setup_rds_server(email=DO, key=\"low_datasites\", root_dir=\"./\")"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Initializing the high datasite and connect to it"
+    "lowside_client = do_stack_1.client\n",
+    "lowside_syftbox_dir = do_stack_1.client.workspace.data_dir\n",
+    "highside_data_dir = lowside_syftbox_dir.parent / \"high_datasites\"\n",
+    "lowside_email = DO"
    ]
   },
   {
@@ -49,9 +53,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!rm -rf {highside_data_dir}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5",
+   "metadata": {},
+   "source": [
+    "## Initializing the high datasite and connect to it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Low side settings\n",
     "\n",
     "# NOTE: This needs to point to an existing syftbox directory. If it does not exist, create one first: https://www.syftbox.net/\n",
+    "print(f\"{lowside_syftbox_dir = }\")\n",
+    "print(f\"{highside_data_dir = }\")\n",
     "\n",
     "# Only required if you want to connect to the low side via SSH (for syncing from high to low)\n",
     "# ssh_config: dict = {\n",
@@ -68,13 +92,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# High side settings\n",
+    "highside_identifier = \"highside-1234\"\n",
+    "print(f\"{highside_identifier = }\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# First, initialize the high datasite\n",
-    "highside_data_dir = syhl.initialize_high_datasite(\n",
+    "syhl.initialize_high_datasite(\n",
+    "    lowside_syftbox_client=lowside_client,\n",
     "    highside_identifier=highside_identifier,\n",
+    "    highside_data_dir=highside_data_dir,\n",
     "    force_overwrite=True,\n",
     ")"
    ]
@@ -82,17 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "highside_data_dir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,8 +131,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "highside_client.workspace.data_dir"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "11",
    "metadata": {},
    "source": [
     "# Initial sync"
@@ -113,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "16",
    "metadata": {},
    "source": [
     "# Create a high-side dataset"
@@ -172,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,15 +219,13 @@
     "import os\n",
     "\n",
     "# Set the high client as default syftbox client\n",
-    "os.environ[CONFIG_PATH_ENV] = str(\n",
-    "    highside_client.workspace.data_dir.parent / \"config.json\"\n",
-    ")"
+    "os.environ[CONFIG_PATH_ENV] = str(highside_client.config_path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,12 +235,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create some random mock and private data\n",
-    "\n",
     "from pathlib import Path\n",
     "import random\n",
     "import pandas as pd\n",
@@ -235,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,12 +284,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
     "DATASET_NAME = \"my_cool_dataset\"\n",
-    "\n",
     "\n",
     "highside_dataset = syd.create(\n",
     "    name=DATASET_NAME,\n",
@@ -270,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,45 +324,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
     "from syft_rds import init_session\n",
     "\n",
-    "\n",
     "high_rds_client = init_session(host=highside_client.email)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f\"{high_rds_client.is_admin = }\")\n",
-    "high_rds_client.dataset.get_all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "high_rds_client.dataset.get_all()[0].mock_dir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "highside_client.workspace.data_dir"
    ]
   },
   {
@@ -338,7 +340,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lowside_client.workspace.data_dir"
+    "print(f\"{high_rds_client.is_admin = }\")\n",
+    "high_rds_client.dataset.get_all()"
    ]
   },
   {
@@ -371,7 +374,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lowside_client.workspace.data_dir"
+    "do_stack_1.client.config_path"
    ]
   },
   {
@@ -381,17 +384,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We can now see the dataset on the low side!\n",
-    "from syft_datasets import SyftDatasetManager\n",
+    "from syft_core import Client as SyftBoxClient\n",
     "\n",
-    "lowside_dataset_manager = SyftDatasetManager(syftbox_client=lowside_client)\n",
-    "lowside_dataset_manager.get_all()"
+    "lowside_syftbox_client = SyftBoxClient.load(filepath=do_stack_1.client.config_path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can now see the dataset on the low side!\n",
+    "from syft_datasets import SyftDatasetManager\n",
+    "\n",
+    "lowside_dataset_manager = SyftDatasetManager(syftbox_client=lowside_syftbox_client)\n",
+    "lowside_dataset_manager.get_all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,9 +438,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "34",
+   "metadata": {},
+   "source": [
+    "Sync again (let's say after a job is done / new jobs arrive)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34",
+   "id": "36",
    "metadata": {},
    "source": [
     "## High side Job Runner\n",
@@ -444,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35",
+   "id": "37",
    "metadata": {},
    "source": [
     "## Low side submits jobs to the correct runner on the high side. Check for results in the outputs folder\n",
@@ -455,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": []
