--- a/packages/syft-runtimes/notebooks/high-low/high_low_local_stack.ipynb
+++ b/packages/syft-runtimes/notebooks/high-low/high_low_local_stack.ipynb
@@ -57,8 +57,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lowside_client.email"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6",
    "metadata": {},
    "source": [
     "## Initializing the high datasite and connect to it"
@@ -67,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,28 +114,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First, initialize the high datasite\n",
+    "# First, initialize the high datasite - runs on the low side\n",
     "syhl.initialize_high_datasite(\n",
     "    lowside_syftbox_client=lowside_client,\n",
     "    highside_identifier=highside_identifier,\n",
     "    highside_data_dir=highside_data_dir,\n",
     "    force_overwrite=True,\n",
+    ")\n",
+    "\n",
+    "# TODO: change to (this happens on the high side) -> create the folder structure, the default sync config\n",
+    "syhl.initialize_high_datasite(\n",
+    "    email=\"your_email\",\n",
+    "    force_overwrite=True,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10",
+   "metadata": {},
+   "source": [
+    "Note: `syft_core`'s `Client` is a python handle to work with the `SyftBox` file system. We have the `SyftBox` file system on the high side, but we never install the `syftbox` Go Client (`curl -fsSL https://syftbox.net/install.sh | sh`)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
     "highside_email = lowside_client.email\n",
-    "highside_client = syhl.high_side_connect(\n",
+    "highside_client = syhl.high_side_connect(  # happens on the either / but should be on the high side for security demonstration\n",
     "    email=highside_email, data_dir=highside_data_dir\n",
     ")"
    ]
@@ -133,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,82 +166,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
-   "metadata": {},
-   "source": [
-    "# Initial sync"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "12",
-   "metadata": {},
-   "source": [
-    "Create sync config for `jobs` and `done` folders"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "13",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "sync_config: RsyncConfig = syhl.create_default_sync_config(\n",
-    "    highside_client=highside_client,\n",
-    "    lowside_client=lowside_client,\n",
-    "    highside_identifier=highside_identifier,\n",
-    "    force_overwrite=True,\n",
-    "    **ssh_config,\n",
-    ")"
+    "# Create a high-side dataset\n",
+    "\n",
+    "Runs on the high side"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "14",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sync_config.model_dump()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for debugging\n",
-    "from syft_runtimes.high_low.setup import _get_sync_commands\n",
-    "\n",
-    "commands = _get_sync_commands(rsync_config=sync_config, verbose=True)\n",
-    "commands"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "syhl.sync(syftbox_client=highside_client, rsync_config=sync_config)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "17",
-   "metadata": {},
-   "source": [
-    "# Create a high-side dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,10 +313,65 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27",
+   "id": "23",
    "metadata": {},
    "source": [
     "Sync the mock part of the dataset to the low side, also add the dataset names into the runtime's `config.yaml` file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sync_config: RsyncConfig = syhl.create_default_sync_config(  # TODO: make this run in the backend when the high side is intitialized\n",
+    "    highside_client=highside_client,\n",
+    "    lowside_client=lowside_client,\n",
+    "    highside_identifier=highside_identifier,\n",
+    "    force_overwrite=True,\n",
+    "    **ssh_config,\n",
+    ")\n",
+    "\n",
+    "sync_config.model_dump()\n",
+    "\n",
+    "syhl.sync(syftbox_client=highside_client, rsync_config=sync_config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "syhl.sync_dataset(\n",
+    "    dataset_name=DATASET_NAME,\n",
+    "    highside_client=highside_client,  # TODO: we can remove this\n",
+    "    lowside_client=lowside_client,  # TODO: we can remove this\n",
+    "    verbose=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26",
+   "metadata": {},
+   "source": [
+    "## Sync jobs and done folder\n",
+    "\n",
+    "Sync `jobs` and `done` folder (Runs on the high side)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "syhl.sync_jobs(syftbox_client=highside_client)"
    ]
   },
   {
@@ -366,12 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "syhl.sync_dataset(\n",
-    "    dataset_name=DATASET_NAME,\n",
-    "    highside_client=highside_client,\n",
-    "    lowside_client=lowside_client,\n",
-    "    verbose=True,\n",
-    ")"
+    "syhl.sync_results(syftbox_client=highside_client)"
    ]
   },
   {
@@ -380,7 +390,7 @@
    "metadata": {},
    "source": [
     "# Switch to low-side\n",
-    "We want to check if the low-side has the synced dataset"
+    "We want to check if the low-side has the synced dataset (only the mock part)"
    ]
   },
   {
