init highside, connecting to lowside works locally and over ssh

--- a/packages/syft-runtimes/notebooks/high-low/high_low_local_stack_2.ipynb
+++ b/packages/syft-runtimes/notebooks/high-low/high_low_local_stack_2.ipynb
@@ -26,7 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "remove_rds_stack_dir(key=\"low_datasites\", root_dir=\"./\")"
+    "remove_rds_stack_dir(key=\"low_datasites\", root_dir=\"./\")\n",
+    "!rm -rf ./high_datasites"
    ]
   },
   {
@@ -60,22 +61,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!rm -rf {highside_syftbox_dir}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "lowside_client.email"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "6",
    "metadata": {},
    "source": [
     "## DO (High): Initializing the high datasite"
@@ -84,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "11",
    "metadata": {},
    "source": [
     "## DO (high): Create a high-side dataset"
@@ -142,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,10 +237,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "18",
    "metadata": {},
    "source": [
     "## DO (High): Connect to low-side"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19",
+   "metadata": {},
+   "source": [
+    "Connecting via local connection"
    ]
   },
   {
@@ -261,7 +260,7 @@
    "source": [
     "lowside_client = highside_client.lowside_connect(\n",
     "    highlow_identifier=highlow_identifier,\n",
-    "    lowside_data_dir=lowside_syftbox_dir,  # will be ssh_config in production\n",
+    "    lowside_data_dir=lowside_syftbox_dir,\n",
     ")"
    ]
   },
