--- a/packages/syft-runtimes/notebooks/high-low/highside.ipynb
+++ b/packages/syft-runtimes/notebooks/high-low/highside.ipynb
@@ -14,21 +14,23 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1",
-   "metadata": {},
-   "source": [
-    "## Initialize the high datasite (secure, self-contained)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "highlow_identifier = \"highlow-1234\""
+    "import syft_core\n",
+    "\n",
+    "syft_core.__version__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2",
+   "metadata": {},
+   "source": [
+    "## Initialize the high datasite (secure, self-contained)"
    ]
   },
   {
@@ -38,7 +40,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = Client.load()\n",
+    "highlow_identifier = \"highlow-1234\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = Client.load(\"./config.json\")\n",
     "\n",
     "highside_client: syhl.HighSideClient = syhl.initialize_high_datasite(\n",
     "    email=client.email,\n",
@@ -48,8 +60,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "highside_client.config_path"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "4",
+   "id": "6",
    "metadata": {
     "vscode": {
      "languageId": "raw"
@@ -62,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,12 +99,23 @@
     "    summary=\"This is a mock dataset for demonstration purposes.\",\n",
     "    tags=[\"example\", \"testing\", \"highside\"],\n",
     "    location=highlow_identifier,\n",
+    "    syftbox_config_path=highside_client.config_path,\n",
     ")"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "highside_dataset"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "9",
    "metadata": {
     "vscode": {
      "languageId": "raw"
@@ -91,32 +124,54 @@
    "source": [
     "## Configure secure connection to low side\n",
     "\n",
-    "Only SSH parameters - no low side file system knowledge required\n"
+    "SSH connection - dictionary with the essentials"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
     "ssh_config: dict = {\n",
-    "    \"low_ssh_host\": \"74.235.86.18\",\n",
-    "    \"low_ssh_user\": \"azureuser\",\n",
-    "    \"low_ssh_port\": 22,\n",
-    "    \"low_ssh_key_path\": \"~/.ssh/flower-vm-1\",\n",
+    "    \"host\": \"48.216.217.94\",\n",
+    "    \"user\": \"azureuser\",\n",
+    "    \"port\": 22,\n",
+    "    \"ssh_key_path\": \"~/.ssh/flower-vm-2\",\n",
     "}\n",
     "\n",
     "lowside_client = highside_client.lowside_connect(\n",
-    "    highlow_identifier=highlow_identifier, connection_config=ssh_config\n",
+    "    highlow_identifier=highlow_identifier,\n",
+    "    ssh_config=ssh_config,\n",
+    "    lowside_data_dir=\"/home/azureuser/SyftBox\",\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lowside_client.connection_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lowside_client.ssh_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
